2020-10-25  Karl Berry  <karl@freefriends.org>

	* tex4ht-mkht.tex: more copyright 2020, https for tug.org.
	* Makefile (diff-scripts, install-scripts): new targets.
	(install_data, inst_dir_scripts): new variables.

2020-10-25  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-mkht.tex (all .unix and .bat files that use plain TeX):
	use etex in shell scripts for plain TeX.
	* tex4ht-4ht.tex (plain.4ht): declare configurations for spacing
	commands in plain TeX.

2020-10-18  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (minted-sty-hooks.4ht): fixed the breaklines option
	handling.

2020-10-17  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (usepackage.4ht,graphics-hooks.4ht): adapted Graphics for
	the new package hook mechanism.
	* tex4ht-4ht.tex (usepackage.4ht,xcolor-hooks.4ht): adapted Xcolor for
	the new package hook mechanism.
	* tex4ht-4ht.tex (usepackage.4ht,caption-hooks.4ht): adapted Caption for
	the new package hook mechanism.
	* tex4ht-4ht.tex (usepackage.4ht,pdfbase-hooks.4ht): adapted Pdfbase for
	the new package hook mechanism.
	* tex4ht-4ht.tex (usepackage.4ht,tikz-hooks.4ht): adapted Tikz for
	the new package hook mechanism.
	* tex4ht-4ht.tex (usepackage.4ht,fontspec-hooks.4ht, polyglossia-hooks.4ht): 
	adapted Fontspec and Polyglossia for the new package hook mechanism.
	* tex4ht-4ht.tex (usepackage.4ht,ctex-hooks.4ht): adapted Ctex for
	the new package hook mechanism.
	* tex4ht-4ht.tex (usepackage.4ht,xecjk-hooks.4ht): adapted xeCJK for
	the new package hook mechanism.
	* tex4ht-4ht.tex (usepackage.4ht,xecjk-hooks.4ht): adapted xeCJK for
	the new package hook mechanism.
	* tex4ht-4ht.tex (usepackage.4ht,savetrees-hooks.4ht): adapted savetrees for
	the new package hook mechanism.
	* tex4ht-4ht.tex (usepackage.4ht,expl3-hooks.4ht): adapted expl3 for
	the new package hook mechanism.
	* tex4ht-4ht.tex (usepackage.4ht,showframe-hooks.4ht): adapted showframe for
	the new package hook mechanism.