@@ -1102,6 +1102,7 @@ endfirstln
 >>>
 
 \<windows line\><<<
+@echo off
 ?<MYcopyrightnotice?>
 >>>
 
